Get filtered query test passing